# shape-classification

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
base_networks/alexnet/: solver.prototxt
base_networks/squeezenet/: deploy.prototxt  solver.prototxt  train_val.prototxt
cmake/: FindCaffe.cmake
include/: cylinder_classifier.h  network_classes.hpp  object_detection.h  shape_detection.h
scripts/: download_dataset.sh  download_models.sh
src/cpp/: cylinder_classifier.cpp  network.cpp  object_detection.cpp  shape_detection.cpp
src/python/: create_lmdb.py  detector.py  modify_dataset.py  plot_learning_curve.py  precision_recall.py
tests/: test.sh
